[tool.poetry]
name = "camerahub-tagger"
version = "0.1.0"
description = "Companion app for CameraHub which writes EXIF tags to photos"
authors = ["Jonathan Gazeley <me@jonathangazeley.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
